# Iris-ColorPicker

./: .gitignore  README.md  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  styles.css  test-picker.js
src/: index.html  renderer.js  styles.css  tauri-shim.js  xkcd-colors.js
src-tauri/: Cargo.toml  errors.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
